# movie-recommendation

./: .gitignore  LICENSE  README.md  gitignore  main.py
veil-browser/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
veil-browser/python-service/: requirements.txt  run.py
veil-browser/python-service/app/: main.py
veil-browser/python-service/app/core/: config.py  constants.py
veil-browser/python-service/app/routes/: analyze.py  risk.py  trackers.py
veil-browser/python-service/app/services/: analyzer_service.py  risk_service.py  tracker_service.py
veil-browser/src/: App.css  App.jsx  index.css
veil-browser/src-tauri/: Cargo.toml  tauri.conf.json
veil-browser/src-tauri/src/: main.rs
veil-browser/src/components/: Navbar.css  Navbar.jsx  Sidebar.css  Sidebar.jsx  Tab.css  Tab.jsx  Tabs.css  Tabs.jsx  WebView.css  WebView.jsx
veil-browser/src/pages/: Home.jsx  PrivacyDashboard.css  PrivacyDashboard.jsx  Settings.css  Settings.jsx
veil-browser/src/services/: api.js
veil-browser/src/store/: browserStore.js  settingsStore.js  tabStore.js
