[package]
name = "veil-browser"
version = "0.1.0"
description = "A privacy-focused, highly customizable web browser"
authors = ["Veil Team"]
license = "MIT"
repository = "https://github.com/veil-browser/veil-browser"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
